# pathtracer

./: Cargo.toml  README.md
benches/: material_bench.rs  rng_bench.rs
src/: dielectric.rs  emissive.rs  glossy.rs  hit_info.rs  lambertian.rs  lib.rs  main.rs  material.rs  material_mgr.rs  mesh.rs  metallic.rs  object.rs  onb.rs  plane.rs  sphere.rs  tracer.rs
